--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/dtnKLL4X/kklogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>koven-kafe-demo</title>
+    <title>Koven Kafe POS - A Fishy Affair</title>
   </head>
   <body>
     <div id="root"></div>
